fixed canvas on mobile archive styling

--- a/src/App.css
+++ b/src/App.css
@@ -434,9 +434,43 @@
 
 .archive-container {
   height: 100%;
-  width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+}
+
+@media (max-width: 700px) {
+  .archive-container {
+    flex-direction: column;
+    justify-content: space-between;
+    justify-content: flex-start; /* Adjusts content alignment */
+    position: relative;
+  }
+
+  .archive-container .button {
+    height: 10%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+  }
+
+  .archive-container .canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 95%;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
 
 .box-gigs {
@@ -451,6 +485,7 @@
 @media (max-width: 700px) {
   .box-gigs {
     width: 100%;
+    height: auto;
   }
 }
 
